# ml-03-classification

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  AI_USE.md  CITATION.cff  README.md  pyproject.toml  zensical.toml
.annotations/: annotations.md
.github/: dependabot.yml  lychee.toml
.github/workflows/: ci-python-zensical.yml  deploy-zensical.yml  links.yml
data/raw/: README.md  hours_scores_case.csv
docs/: api.md  glossary.md  index.md  project-instructions.md  your-files.md
docs/module/: RESOURCES.md  TROUBLESHOOTING.md
notebooks/: ml_03_case.ipynb
src/mlstudio/: __init__.py  app_case.py  app_mushrooms_venkat_teja.py  app_venkat_teja.py
tests/: test_app_case.py
